--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,4 +4,5 @@ export(CommentManager)
 export(EquationNumberManager)
 export(FigureManager)
 export(SectionNumberManager)
+export(TableManager)
 importFrom(R6,R6Class)
